--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
 		]
 	},
 	"dependencies": {
+		"@ai-sdk/openai": "^2.0.23",
+		"@assistant-ui/react": "^0.10.44",
+		"@assistant-ui/react-markdown": "^0.10.9",
+		"@dnd-kit/core": "^6.3.1",
+		"@dnd-kit/sortable": "^10.0.0",
+		"@dnd-kit/utilities": "^3.2.2",
 		"@hookform/resolvers": "^5.2.1",
 		"@radix-ui/react-accordion": "^1.2.12",
 		"@radix-ui/react-alert-dialog": "^1.1.15",
@@ -49,11 +55,13 @@
 		"@radix-ui/react-toggle-group": "^1.1.11",
 		"@radix-ui/react-tooltip": "^1.2.8",
 		"@supabase/supabase-js": "^2.56.0",
+		"@typebot.io/react": "^0.8.18",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.1.1",
 		"date-fns": "^4.1.0",
 		"embla-carousel-react": "^8.6.0",
+		"framer-motion": "^12.23.12",
 		"input-otp": "^1.4.2",
 		"lucide-react": "^0.542.0",
 		"next": "15.5.2",
@@ -62,9 +70,12 @@
 		"react-day-picker": "^9.9.0",
 		"react-dom": "19.1.0",
 		"react-hook-form": "^7.62.0",
+		"react-intersection-observer": "^9.16.0",
+		"react-markdown": "^10.1.0",
 		"react-resizable-panels": "^3.0.5",
 		"recharts": "2.15.4",
 		"reflect-metadata": "^0.2.2",
+		"remark-gfm": "^4.0.1",
 		"sonner": "^2.0.7",
 		"tailwind-merge": "^3.3.1",
 		"tsyringe": "^4.10.0",
