--- a/package.json
+++ b/package.json
@@ -55,7 +55,12 @@
 		"@radix-ui/react-toggle-group": "^1.1.11",
 		"@radix-ui/react-tooltip": "^1.2.8",
 		"@supabase/supabase-js": "^2.56.0",
+		"@tanstack/react-query": "^5.85.6",
+		"@tanstack/react-query-devtools": "^5.85.6",
 		"@typebot.io/react": "^0.8.18",
+		"@types/canvas-confetti": "^1.9.0",
+		"axios": "^1.11.0",
+		"canvas-confetti": "^1.9.3",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.1.1",
@@ -64,6 +69,7 @@
 		"framer-motion": "^12.23.12",
 		"input-otp": "^1.4.2",
 		"lucide-react": "^0.542.0",
+		"motion": "^12.23.12",
 		"next": "15.5.2",
 		"next-themes": "^0.4.6",
 		"react": "19.1.0",
