--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
 		"recharts": "2.15.4",
 		"reflect-metadata": "^0.2.2",
 		"remark-gfm": "^4.0.1",
+		"rough-notation": "^0.5.1",
 		"sonner": "^2.0.7",
 		"tailwind-merge": "^3.3.1",
 		"tsyringe": "^4.10.0",
