feat: add noUnusedImports rule to correctness in biome configuration
- Introduce a new rule under correctness to enforce no unused imports, enhancing code quality and maintainability.

--- a/biome.json
+++ b/biome.json
@@ -32,7 +32,9 @@
 		"rules": {
 			"recommended": true,
 			"complexity": {},
-			"correctness": {},
+			"correctness": {
+				"noUnusedImports": "error"
+			},
 			"suspicious": {
 				"noUnknownAtRules": "off"
 			},
